syntax = "proto3";

package xyz.redtorch.pb;

// 数据交换协议
message DataExchangeProtocol {

	// 报文类型
	enum ContentType {
		ROUTINE = 0;  // 常规
		COMPRESSED_LZ4 = 1;  // LZ4压缩
	}
	ContentType contentType = 1;  // 报文类型
	fixed32 rpcId = 2;  // RPC ID
	bytes contentBytes = 3;  // 数据内容
	fixed64 timestamp = 4;  // 时间戳
}